Prepare app for deployment (Vercel + Railway)
- Backend: configurable server port, datasource (Postgres-ready via
  env vars, H2 default for local dev), and CORS allowed origins;
  add PostgreSQL driver dependency
- Frontend: API base URL configurable via REACT_APP_API_URL